--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.6.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-dropdown-picker": "^5.1.19",
@@ -23,7 +26,10 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-switch-toggle": "^2.1.1",
-    "react-native-wifi-reborn": "^4.3.8"
+    "react-native-wifi-reborn": "^4.3.8",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -37,6 +43,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
+    "redux-devtools": "^3.7.0",
     "typescript": "^3.8.3"
   },
   "resolutions": {
