--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ConnectModuleWifi",
-  "displayName": "ConnectModuleWifi"
+  "name": "rnlehieubase",
+  "displayName": "rnlehieubase"
 }
