--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-switch-toggle": "^2.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-wifi-reborn": "^4.3.8",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
@@ -33,15 +35,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.171",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.31.0",
+    "eslint-config-react-native-wcandillon": "^3.6.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "prettier": "^2.3.2",
+    "react-native-rename": "^2.9.0",
     "react-test-renderer": "17.0.1",
     "redux-devtools": "^3.7.0",
     "typescript": "^3.8.3"
