--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,9 +4,8 @@ buildscript {
     ext {
         buildToolsVersion = "29.0.3"
         minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
-        ndkVersion = "20.1.5948944"
+        compileSdkVersion = 30
+        targetSdkVersion = 30
     }
     repositories {
         google()
@@ -30,7 +29,10 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
+        maven {
+            // expo-camera bundles a custom com.google.android:cameraview
+            url "$rootDir/../node_modules/expo-camera/android/maven"
+        }
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
