--- a/package.json
+++ b/package.json
@@ -16,18 +16,29 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
+    "expo-camera": "^11.2.2",
+    "expo-gl": "^10.4.2",
+    "expo-permissions": "^12.1.1",
     "lodash": "^4.17.21",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-dropdown-picker": "^5.1.19",
+    "react-native-easy-icon": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-filter-kit": "^0.8.0",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.1.1",
+    "react-native-typical": "^1.1.2",
+    "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-wifi-reborn": "^4.3.8",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
