--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.4",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-navigation/drawer": "^6.0.1",
+    "@react-navigation/native": "^6.0.1",
+    "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "expo-camera": "^11.2.2",
     "expo-gl": "^10.4.2",
     "expo-permissions": "^12.1.1",
+    "gl-react": "^5.0.0",
+    "gl-react-expo": "^5.0.0",
+    "gl-react-native": "^5.0.0",
     "lodash": "^4.17.21",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^4.0.3",
@@ -28,11 +36,12 @@
     "react-native-dropdown-picker": "^5.1.19",
     "react-native-easy-icon": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gl-image-filters": "^0.4.0",
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.3.0",
+    "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.1.1",
     "react-native-typical": "^1.1.2",
@@ -42,7 +51,9 @@
     "react-native-wifi-reborn": "^4.3.8",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "webgltexture-loader-expo-camera": "^1.0.0",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
