--- a/package.json
+++ b/package.json
@@ -21,23 +21,17 @@
     "add": "^2.0.6",
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
-    "expo-camera": "^11.2.2",
-    "expo-gl": "^10.4.2",
+    "expo-blur": "^9.0.3",
+    "expo-haptics": "^10.1.0",
     "expo-permissions": "^12.1.1",
-    "gl-react": "^5.0.0",
-    "gl-react-expo": "^5.0.0",
-    "gl-react-native": "^5.0.0",
     "lodash": "^4.17.21",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
-    "ndarray": "^1.0.19",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-easy-icon": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-gl-image-filters": "^0.4.0",
-    "react-native-image-filter-kit": "^0.8.0",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -50,7 +44,6 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
-    "webgltexture-loader-expo-camera": "^1.0.0",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
