--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/slider": "^4.1.1",
     "@react-navigation/drawer": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "expo-blur": "^9.0.3",
     "expo-haptics": "^10.1.0",
+    "expo-music-info": "^1.0.1",
     "expo-permissions": "^12.1.1",
     "lodash": "^4.17.21",
     "lottie-ios": "3.2.3",
@@ -30,14 +31,17 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-document-picker": "^6.0.3",
     "react-native-easy-icon": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
+    "react-native-sound-player": "^0.11.0",
     "react-native-svg": "^12.1.1",
     "react-native-switch-toggle": "^2.1.1",
+    "react-native-track-player": "^2.0.3",
     "react-native-typical": "^1.1.2",
     "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
