--- a/ios/AudioPlayer.xcodeproj/xcshareddata/xcschemes/AudioPlayer.xcscheme
+++ b/ios/AudioPlayer.xcodeproj/xcshareddata/xcschemes/AudioPlayer.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Reanimated2LH.app"
-               BlueprintName = "Reanimated2LH"
-               ReferencedContainer = "container:Reanimated2LH.xcodeproj">
+               BuildableName = "AudioPlayer.app"
+               BlueprintName = "AudioPlayer"
+               ReferencedContainer = "container:AudioPlayer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "Reanimated2LHTests.xctest"
-               BlueprintName = "Reanimated2LHTests"
-               ReferencedContainer = "container:Reanimated2LH.xcodeproj">
+               BuildableName = "AudioPlayerTests.xctest"
+               BlueprintName = "AudioPlayerTests"
+               ReferencedContainer = "container:AudioPlayer.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Reanimated2LH.app"
-            BlueprintName = "Reanimated2LH"
-            ReferencedContainer = "container:Reanimated2LH.xcodeproj">
+            BuildableName = "AudioPlayer.app"
+            BlueprintName = "AudioPlayer"
+            ReferencedContainer = "container:AudioPlayer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Reanimated2LH.app"
-            BlueprintName = "Reanimated2LH"
-            ReferencedContainer = "container:Reanimated2LH.xcodeproj">
+            BuildableName = "AudioPlayer.app"
+            BlueprintName = "AudioPlayer"
+            ReferencedContainer = "container:AudioPlayer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
