--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "podupdate": "cd ios && pod install",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
@@ -29,6 +30,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-document-picker": "^6.0.3",
     "react-native-easy-icon": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
@@ -36,11 +38,13 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
+    "react-native-shared-element": "^0.8.2",
     "react-native-sound-player": "^0.11.0",
     "react-native-svg": "^12.1.1",
     "react-native-track-player": "^2.0.3",
     "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
